2004-05-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new config directive: umask, to set default files/dirs permissions
	* feature: randomize PASV ports, hopefully it will avoid reusing same connections
	* doc: update on PERL module, server variables
	* doc: added examples for tcl and perl
	* bugfix: sfv module use case-sensitive file names on windows

	* IMPORTANT: behaviour change: only file owner and siteop can delete
        file, except if you set a specific permission line in config file

2004-05-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new module: PERL
	* configure.in: display summary of detected options at end of configure
	* doc: modifications to allow generation of php
	* bugfix: allow OPTS command in login sequence to please lftp
	* bugfix: memory leaks in TCL module
	* bugfix: fixed compilation for linux when enabling UTF-8
	* bugfix: TCL: if no arguments, $wzd_arg pointer is not initialized
	* bugfix: windows installer: do not overwrite wzd.pem if existing

2004-05-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new server vars to manipulate user data
	* bugfix: unable to create dirs inside symlinks
	* bugfix: custom site commands causing segfault
	* bugfix: unused strange file descriptor on certificate (wzd_init_lex.l)
	* bugfix: EVENT_LOGOUT sent twice
	* bugfix: return correct message when SITE command is unknown
	* bugfix: unclosed handle after FXP (closes #954477)
	* tcl: each client now run commands in a separate slave interpreter
	* tcl: send_message now parse cookies and can be multi-line
	* tcl: new command vars_group get/set

	* IMPORTANT: behaviour change: site commands with no explicit permission
	line in config are now allowed, whereas before they were not

2004-05-09  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: system path management rewritten from scratch (obsoletes: checkpath)
	* feature: soft symlinks (mainly for win32, will avoid crappy ms
        junctions, never worked correctly)